Optimize rip-off when max'd, Reset Window on Alt-Space

--- a/VisualCrypt.Desktop/Views/ShellWindow.xaml
+++ b/VisualCrypt.Desktop/Views/ShellWindow.xaml
@@ -11,7 +11,8 @@
                       xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
                       xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
                       Title="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=Filename}"
-                      Height="350" Width="805"
+                      Height="{Binding Source={x:Static controls:AppWindow.StartupHeight}}" 
+                      Width="{Binding Source={x:Static controls:AppWindow.StartupWidth}}"
                       WindowStartupLocation="CenterScreen"
                       AllowDrop="True"
                     BorderThickness="0"
