--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -7,28 +7,70 @@
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                       xmlns:controls1="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
                       mc:Ignorable="d"
-                 WindowStyle="None" AllowsTransparency="True"
-                      Title="Set Password" Height="165.147" Width="320.932" WindowStartupLocation="CenterOwner"
-                      d:DataContext="{d:DesignInstance views:SetPasswordDialog}">
-    <Grid>
-        <StackPanel Margin="0">
-            <TextBlock Margin="3">Password:</TextBlock>
-            <PasswordBox Name="PwBox" PasswordChanged="Password_Changed" Margin="3" x:FieldModifier="private" />
-            <TextBlock Margin="3">Password (repeat):</TextBlock>
-            <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed" Margin="3" x:FieldModifier="private" />
-            <DockPanel HorizontalAlignment="Stretch">
-                <Button DockPanel.Dock="Left" HorizontalAlignment="Right" Width="65"
-                        Command="{Binding ClearPasswordCommand}">
-                    Clear
-                </Button>
+                      Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
+                      d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
+                      Background="{DynamicResource BarColorBrush}"
+                      >
+    <controls1:AppWindow.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="15,0"></Setter>
+            <Setter Property="FontSize" Value="13"></Setter>
 
-                <Button DockPanel.Dock="Right" HorizontalAlignment="Right" Width="65" Click="Button_Click">Cancel</Button>
-                <Button x:Name="ButtonOk" DockPanel.Dock="Right" IsDefault="True" HorizontalAlignment="Right"
-                        Width="65"
-                        Command="{Binding SetPasswordCommand}">
-                    Set
-                </Button>
-            </DockPanel>
-        </StackPanel>
-    </Grid>
+        </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="FontSize" Value="14"></Setter>
+            <Setter Property="Margin" Value="15,0,15,10"></Setter>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Height" Value="30"></Setter>
+            <Setter Property="Width" Value="Auto"></Setter>
+            <Setter Property="MinWidth" Value="65"></Setter>
+            <Setter Property="Margin" Value="15"></Setter>
+            <Setter Property="Padding" Value="10,0"></Setter>
+            <Setter Property="BorderThickness" Value="1"></Setter>
+            <Setter Property="FontSize" Value="13"></Setter>
+        </Style>
+       
+    </controls1:AppWindow.Resources>
+    <Border Padding="10">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0"></ColumnDefinition>
+                <ColumnDefinition Width="100*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid x:Name="SymbolCol" Grid.Column="0">
+
+            </Grid>
+            <Grid x:Name="MainCol" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid x:Name="ContentRow" Grid.Row="0">
+                    <StackPanel HorizontalAlignment="Stretch">
+                        <TextBlock Text="{Binding Title}" FontSize="20" LineHeight="35"
+                                   ></TextBlock>
+                      
+                        <TextBlock TextWrapping="Wrap">The password or passphrase must have between 1 and 10 million Unicode characters. The 256 bit AES encryption key will be derived from the password using SHA-256 and Bcrypt hash algorithms.</TextBlock>
+                        <TextBlock></TextBlock>
+                        <TextBlock>Password, please type or paste:</TextBlock>
+                        <PasswordBox Name="PwBox" PasswordChanged="Password_Changed" x:FieldModifier="private" />
+                        <TextBlock>Password, please repeat:</TextBlock>
+                        <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed"  x:FieldModifier="private" />
+
+                    </StackPanel>
+                </Grid>
+                <Grid x:Name="ButtonRow" Grid.Row="1">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Button  Content="Clear" Command="{Binding ClearPasswordCommand}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button  Content="Cancel" Click="Button_Click"/>
+                        <Button HorizontalAlignment="Right" Content="Set" x:Name="ButtonOk" IsDefault="True" Command="{Binding SetPasswordCommand}"/>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+
+        </Grid>
+    </Border>
 </controls1:AppWindow>
