--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -1,38 +1,19 @@
-﻿<controls1:AppWindow x:Class="VisualCrypt.Desktop.Views.SetPasswordDialog"
+﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.Views.SetPasswordDialog"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      xmlns:controls1="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
+                      xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
                       mc:Ignorable="d"
                       Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
                       d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
                       Background="{DynamicResource BarColorBrush}"
                       >
-    <controls1:AppWindow.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="Margin" Value="15,0"></Setter>
-            <Setter Property="FontSize" Value="13"></Setter>
-
-        </Style>
-        <Style TargetType="PasswordBox">
-            <Setter Property="FontSize" Value="14"></Setter>
-            <Setter Property="Margin" Value="15,0,15,10"></Setter>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Height" Value="30"></Setter>
-            <Setter Property="Width" Value="Auto"></Setter>
-            <Setter Property="MinWidth" Value="65"></Setter>
-            <Setter Property="Margin" Value="15"></Setter>
-            <Setter Property="Padding" Value="10,0"></Setter>
-            <Setter Property="BorderThickness" Value="1"></Setter>
-            <Setter Property="FontSize" Value="13"></Setter>
-        </Style>
-       
-    </controls1:AppWindow.Resources>
-    <Border Padding="10">
+    <controls:AppDialog.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppDialog.Resources>
+    <Border x:Name="DialogBorder" Padding="10">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0"></ColumnDefinition>
@@ -48,9 +29,7 @@
                 </Grid.RowDefinitions>
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
-                        <TextBlock Text="{Binding Title}" FontSize="20" LineHeight="35"
-                                   ></TextBlock>
-                      
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}"></TextBlock>
                         <TextBlock TextWrapping="Wrap">The password or passphrase must have between 1 and 10 million Unicode characters. The 256 bit AES encryption key will be derived from the password using SHA-256 and Bcrypt hash algorithms.</TextBlock>
                         <TextBlock></TextBlock>
                         <TextBlock>Password, please type or paste:</TextBlock>
@@ -73,4 +52,4 @@
 
         </Grid>
     </Border>
-</controls1:AppWindow>
+</controls:AppDialog>
