--- a/VisualCrypt.Desktop.ModuleEditor/Views/FindReplace.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/FindReplace.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="VisualCrypt.Desktop.ModuleEditor.Views.FindReplace"
+﻿<controls:AppWindow x:Class="VisualCrypt.Desktop.ModuleEditor.Views.FindReplace"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:VisualCrypt.Desktop.ModuleEditor.Views"
+        xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
         mc:Ignorable="d"
         Title="Find" Height="236.5" Width="365" WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance views:FindReplaceViewModel}">
+    <controls:AppWindow.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppWindow.Resources>
     <Grid>
         <TabControl x:Name="TabControl1" Height="Auto" SelectedIndex="{Binding TabControlSelectedIndex, Mode=TwoWay}">
             <TabItem Header="Find">
@@ -73,4 +77,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</Window>
+</controls:AppWindow>
