--- a/VisualCrypt.Desktop.ModuleEditor/Views/Font.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/Font.xaml
@@ -1,9 +1,13 @@
-﻿<Window x:Class="VisualCrypt.Desktop.ModuleEditor.Views.Font"
+﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.ModuleEditor.Views.Font"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
         Width="500" Height="500"
         Title="Font"
         Background="{x:Static SystemColors.ControlBrush}">
+    <controls:AppDialog.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppDialog.Resources>
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="4*" />
@@ -67,4 +71,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</controls:AppDialog>
