--- a/VisualCrypt.Desktop.ModuleEditor/Views/GoTo.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/GoTo.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="VisualCrypt.Desktop.ModuleEditor.Views.GoTo"
+﻿<controls:AppWindow x:Class="VisualCrypt.Desktop.ModuleEditor.Views.GoTo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:VisualCrypt.Desktop.ModuleEditor.Views"
+        xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
         mc:Ignorable="d"
         Title="Go To" Height="130" Width="220" WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance views:GoToViewModel}">
+    <controls:AppWindow.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppWindow.Resources>
     <Grid>
 
         <StackPanel>
@@ -24,4 +28,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</controls:AppWindow>
