--- a/VisualCrypt.Desktop/Views/AboutDialog.xaml
+++ b/VisualCrypt.Desktop/Views/AboutDialog.xaml
@@ -1,36 +1,58 @@
-﻿<Window x:Class="VisualCrypt.Desktop.Views.AboutDialog"
+﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.Views.AboutDialog"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
                       mc:Ignorable="d"
-                      Title="AboutDialog" Height="262" Width="433.932" WindowStartupLocation="CenterOwner"
+                     Background="{DynamicResource BarColorBrush}"
+                      Title="About VisualCrypt Editor" Height="300" Width="500" WindowStartupLocation="CenterOwner"
                       >
-    <Grid>
-        <DockPanel Margin="20">
-            <StackPanel DockPanel.Dock="Top">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5" xml:space="preserve">Version:</TextBlock>
-                    <TextBlock Margin="5" Text="{Binding Path=NotepadVersion}" />
-                </StackPanel>
-                <TextBlock Margin="5" TextWrapping="Wrap">
-                    <Run Text="Copyright © 201" /><Run Text="5" /><Run Text=" " /><Run Text="VisualCrypt AG" />
-                </TextBlock>
-                <TextBlock Margin="5" TextWrapping="Wrap">
-                    Warning: This computer program is protected by copyright law
-                    and international treaties. Unauthorized reproduction or distribution of this program, or any portion of it, may result in severe civil and criminal penalties, and will be prosecuted to the maximum extent possible under the law.
-                </TextBlock>
+    <controls:AppDialog.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppDialog.Resources>
+    <Border x:Name="DialogBorder" Padding="10">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0"></ColumnDefinition>
+                <ColumnDefinition Width="100*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid x:Name="SymbolCol" Grid.Column="0">
 
-            </StackPanel>
+            </Grid>
+            <Grid x:Name="MainCol" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid x:Name="ContentRow" Grid.Row="0">
+                    <StackPanel HorizontalAlignment="Stretch">
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}"></TextBlock>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock xml:space="preserve">Version:</TextBlock>
+                            <TextBlock  Text="{Binding Path=NotepadVersion}" />
+                        </StackPanel>
+                        <TextBlock></TextBlock>
+                        <TextBlock TextWrapping="Wrap">This version of VisualCrypt Editor is Open Source and free for private use. Please use only the offical download from <Hyperlink>https://visualcrypt.com</Hyperlink> for your security!</TextBlock>
+                        <TextBlock></TextBlock>
+                        <TextBlock TextWrapping="Wrap" FontSize="12">
+                    However, this computer program is protected by copyright law
+                    and international treaties. Unauthorized reproduction or distribution of this program, or any portion of it, may result in severe civil and criminal penalties, and will be prosecuted.
+                        </TextBlock>
 
+                    </StackPanel>
+                </Grid>
+                <Grid x:Name="ButtonRow" Grid.Row="1">
+                    <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <TextBlock Text="Copyright © 2014-2015, VisualCrypt AG, Germany" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Click="Button_Click" IsDefault="True">Ok</Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
 
-            <Button DockPanel.Dock="Bottom" Margin="5" HorizontalAlignment="Right" Click="Button_Click"
-                    IsDefault="True">
-                Ok
-            </Button>
+        </Grid>
+    </Border>
 
-        </DockPanel>
-    </Grid>
-</Window>
+</controls:AppDialog>
