--- a/VisualCrypt.Desktop/Views/ImportEncodingDialog.xaml
+++ b/VisualCrypt.Desktop/Views/ImportEncodingDialog.xaml
@@ -1,27 +1,52 @@
-﻿<Window x:Class="VisualCrypt.Desktop.Views.ImportEncodingDialog"
+﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.Views.ImportEncodingDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+        xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
         mc:Ignorable="d"
-        Title="Import With Encoding" Height="262" Width="433.932" WindowStartupLocation="CenterOwner"
-        d:DataContext="{d:DesignInstance views:AboutDialog}">
-    <Grid>
-        <DockPanel Margin="20">
-            <StackPanel DockPanel.Dock="Top">
-                <TextBlock Margin="5" TextWrapping="Wrap">Use this when you see garbled characters when opening clear text files. This might happen when the file was created in another country.</TextBlock>
-
-                <TextBlock Margin="5" Text="The preselected Encoding is the default for your Windows version." />
-                <ComboBox ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncodingInfo}"
+        Title="Import With Encoding" Height="300" Width="500" WindowStartupLocation="CenterOwner"
+        d:DataContext="{d:DesignInstance views:AboutDialog}"
+                    Background="{DynamicResource BarColorBrush}">
+    <controls:AppDialog.Resources>
+        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+    </controls:AppDialog.Resources>
+    <Border x:Name="DialogBorder" Padding="10">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0"></ColumnDefinition>
+                <ColumnDefinition Width="100*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid x:Name="SymbolCol" Grid.Column="0">
+            </Grid>
+            <Grid x:Name="MainCol" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid x:Name="ContentRow" Grid.Row="0">
+                    <StackPanel HorizontalAlignment="Stretch">
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}"></TextBlock>
+                        <TextBlock TextWrapping="Wrap">Use this when you see garbled characters when opening clear text files. This might happen when the file was created in another country.</TextBlock>
+                        <TextBlock></TextBlock>
+                        <TextBlock Text="The preselected Encoding is the default for your Windows version." />
+                        <TextBlock></TextBlock>
+                        <ComboBox ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncodingInfo}"
                           DisplayMemberPath="DisplayName" d:DataContext="{d:DesignInstance views:ImportEncodingDialog}" />
-                <TextBlock Margin="5" TextWrapping="Wrap">The selected import Encoding will be preserved when you use File / Export Clear Text, otherwise UTF-8 without BOM would be used for export.</TextBlock>
-            </StackPanel>
+                        <TextBlock TextWrapping="Wrap">The selected import Encoding will be preserved when you use File / Export Clear Text, otherwise UTF-8 without BOM would be used for export.</TextBlock>
 
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" HorizontalAlignment="Right">
-                <Button Margin="5" HorizontalAlignment="Right" Click="ImportButton_Click" IsDefault="True">Import...</Button>
-                <Button DockPanel.Dock="Bottom" Margin="5" HorizontalAlignment="Right" Click="CancelButton_Click">Cancel</Button>
-            </StackPanel>
-        </DockPanel>
-    </Grid>
-</Window>
+                    </StackPanel>
+                </Grid>
+                <Grid x:Name="ButtonRow" Grid.Row="1">
+                  
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Click="ImportButton_Click" IsDefault="True">Import...</Button>
+                        <Button Click="CancelButton_Click">Cancel</Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+
+        </Grid>
+    </Border>
+</controls:AppDialog>
